fixing list buttons alignment

--- a/client/styles/index.css
+++ b/client/styles/index.css
@@ -82,8 +82,7 @@ li {
 .check-box {
   height: 18px;
   width: 18px;
-  padding-right: 30px;
-  margin-top: 8px;
+  margin: 6px;
   box-shadow: 0px 4px 4px #6b6b6b;
 }
 
@@ -108,8 +107,7 @@ li {
   border-color: #ffffff;
   box-shadow: 0px 4px 4px #6b6b6b;
   background-color: #ffffff;
-  padding-left: 2px;
-  margin-top: 4px;
+  padding: 2px
 }
 
 #todo-input:focus,
